<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Final Project</string>
    <string name="noneMessage" translatable="true">Sorry, this artist is not found.</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="loadDB">Load from Database</string>
    <string name="saveDB">Save to Database</string>
    <string name="search">Search</string>
    <string name="mainButton">Audio Database</string>
    <string name="searchHeader">Search for Artist:</string>
    <string name="hello_world">Hello Round World!</string>
    <string name="covidWelcome">COVID-19 by Country and Date</string>
    <string name="covidSaved">Save Date</string>
    <string name="covidDelete">Delete Date</string>
    <string name="covidDate">YYYY-MM-DD</string>
    <string name="covidCountryName">Enter Country</string>
    <string name="covidSearch">Search</string>
    <string name="covidListInfo">SAVED SEARCHES</string>
    <string name="covid">COVID-19</string>
    <string name="recipe">Recipe Search</string>
    <string name="ticket">TicketMaster Event</string>
    <string name="audio">The Audio Database</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="covidButton">Covid-19 Information</string>
    <string name="recipeButton">Recipe Activity</string>
    <string name="item">Item</string>
    <string name="ingredients">Ingredients</string>
</resources>