<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
        <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covidWelcome"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/covidCountryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:hint="@string/covidCountryName"
                    android:inputType="text" />
                <EditText
                    android:id="@+id/covidDate"
                    android:layout_weight="0.32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covidDate" />

                <Button
                    android:id="@+id/covidSearch"
                    android:layout_weight="0.18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covidSearch" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    style="?android:attr/progressBarStyleHorizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covidListInfo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="center" />

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/swipeRefresher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ListView
                        android:id="@+id/covidList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_layout"
            app:menu="@menu/toolbar_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>